--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.8",
-    "ui-router": "~0.2.15"
+    "ui-router": "~0.2.15",
+    "react": "~0.14.4",
+    "skeleton": "~2.0.4"
   }
 }
